# wasmbounds

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Bakefile-armv8.hcl  Bakefile-riscv.hcl  Bakefile-x86-64.hcl  CMakeLists.txt  CMakePresets.json  Dockerfile.wasmbounds-runners  Dockerfile.wasmbounds-runtime-base  Dockerfile.wasmbounds-toolchain-base  LICENSE  README.MD  benchrunner.sh  build_binaries.sh  build_containers.sh  build_containers_riscv_x.sh  jsconfig.json  mallocbench.c  patches-nodev8.patch  patches-polybenchc.patch  patches-wasm3.patch  patches-wasmtime.patch  patches-wavm.patch  speccpu2017-compat-patches.patch  toolchain_shell.sh  toolchain_shell_riscv_x.sh
WAVM/: CMakeLists.txt
WAVM/Include/WAVM/IR/: FeatureSpec.h
WAVM/Include/WAVM/Inline/: BasicTypes.h  Serialization.h
WAVM/Include/WAVM/Platform/: Event.h  Memory.h  Signal.h
WAVM/Include/WAVM/Runtime/: Runtime.h
WAVM/Lib/IR/: DisassemblyNames.cpp  FeatureSpec.cpp
WAVM/Lib/LLVMJIT/: EmitCore.cpp  EmitMem.cpp  LLVMCompile.cpp  LLVMJIT.cpp  LLVMModule.cpp
WAVM/Lib/Logging/: Logging.cpp
WAVM/Lib/Platform/: CMakeLists.txt
WAVM/Lib/Platform/POSIX/: MemoryPOSIX.cpp  SignalPOSIX.cpp  ThreadPOSIX.cpp
WAVM/Lib/Runtime/: Compartment.cpp  Exception.cpp  Instance.cpp  Intrinsics.cpp  Memory.cpp  Module.cpp  RuntimePrivate.h  Table.cpp
WAVM/Lib/WASI/: WASIDiagnostics.cpp
graphs/: knitall.R  wasmbounds.Rmd
node-v18.2.0/: config.gypi  config.mk  config.status  icu_config.gypi  vcbuild.bat
node-v18.2.0/doc/api/: addons.html  assert.html  assert.json  async_context.html  async_context.json  async_hooks.html  async_hooks.json  buffer.html  buffer.json  child_process.html  child_process.json  cli.html  cli.json  cluster.html  cluster.json  console.html  console.json  corepack.html  corepack.json  crypto.html  crypto.json  debugger.html  deprecations.html  deprecations.json  dgram.html  dgram.json  diagnostics_channel.html  diagnostics_channel.json  dns.html  dns.json  documentation.html  documentation.json  documentation.md  domain.html  domain.json  embedding.html  embedding.json  errors.html  errors.json  esm.html  (+80 more)
polybench-c-4.2/utilities/: polybench.c
runner-src/: impl_native.cpp  impl_nodejs.cpp  impl_nodejs.js  impl_wasm3.cpp  impl_wasmtime.cpp  impl_wavm.cpp  runner.cpp  runner.h
runner-src/vm-library/: wasmbounds_rr.cpp  wasmbounds_rr.h  wasmbounds_rr.hpp  wasmbounds_uffd.ipp
scripts/: benchrunner.py  build_polybench.py  compile_spec.sh  fixlog.py  incontainer_build.sh  log2csv.py  log2sqlite.py  logreplace.py  run_spec.sh  setup_spec.sh  spec_compilesh_parallelize.py  test.sh
statmon/: .rustfmt.toml  Cargo.toml
statmon/src/: cpustat.rs  eventstat.rs  iostat.rs  main.rs  stats.rs
wasm3-0.5.0/: CMakeLists.txt
wasm3-0.5.0/source/: CMakeLists.txt  m3_api_uvwasi.c  m3_compile.c  m3_env.c  m3_env.h  m3_module.c  m3_parse.c
wasmtime/: .gitattributes  .gitignore
wasmtime/cranelift/codegen/src/: lib.rs
wasmtime/cranelift/codegen/src/legalizer/: heap.rs
wasmtime/cranelift/wasm/src/: lib.rs
wasmtime/crates/c-api/: Cargo.toml
wasmtime/crates/c-api/include/wasmtime/: memory.h
wasmtime/crates/c-api/src/: memory.rs
wasmtime/crates/runtime/src/: instance.rs  lib.rs  memory.rs  wasmbounds_hooks.rs
wasmtime/crates/wasmtime/src/: config.rs  memory.rs
wasmtime/crates/wasmtime/src/trampoline/: memory.rs
