[package]
name = "statmon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "time", "io-util"] }
argh = "0.1"
anyhow = "1"
parking_lot = "0.12.1"
libc = "0.2.112"
itertools = "0.10.3"
regex = "1.5"
perfcnt = { path = "./rust-perfcnt" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
